# rancher-project-info-propagator

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: cli.rs  context.rs  controller.rs  errors.rs  main.rs  namespace.rs  namespaces_controller.rs  project.rs  projects_cache.rs  projects_controller.rs
