[package]
name = "rancher-project-info-propagator"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.25"
k8s-openapi = { version = "0.18.0", features = ["v1_26"], default-features = false }
kube = { version = "0.82.0", features = ["runtime", "client", "derive"] }
lazy_static = "1.4.0"
schemars = { version = "0.8.11", features = ["chrono"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["ansi", "fmt", "json", "env-filter"] }
